@startuml

skinparam linetype ortho

title Execute Playback \n(Iteration 1)


''' Class definitions '''

Package "Domain"
{
	Package "Playback"
	{
		class PlaybackTimingManager
		{
			addSubscriber(PlaybackTimingSubscriber)
			handlePlayback()
		}

		interface PlaybackTimingSubscriber
		{
			handlePlaybackStep()
		}

		interface TempoTimer
		{
			setTempo(BeatsPerMinute)
			start()
			stop()
			clear()
			playbackStepIsDue() : Boolean
		}

		class TempoTimer16Bit
		{
			setTempo(BeatsPerMinute)
			start()
			stop()
			clear()
			countPulse()
			playbackStepIsDue() : Boolean
		}

		class LedBlinker
		{
			handlePlaybackStep()
		}
	}
}

Package "HardwareAbstractionLayer"
{
	interface Timer16Bit
	{
		setPeriod(Integer)
		setPrescaler(PrescaleOption)
		start()
		stop()
		clear()
	}
}

Package "Drivers"
{
	class GpioPin
	{
		set()
		clear()
	}

	class Timer1
	{
		enablePeriodicInterrupts()
		setPeriod(Integer)
		setPrescaler(PrescaleOption)
		start()
		stop()
		clear()
	}
}


''' Class relations '''

PlaybackTimingManager --> TempoTimer
PlaybackTimingManager --> PlaybackTimingSubscriber

TempoTimer <|-- TempoTimer16Bit
TempoTimer16Bit --> Timer16Bit
Timer16Bit <|.. Timer1

PlaybackTimingSubscriber <|.. LedBlinker

LedBlinker --> GpioPin

@enduml
